# icalwarrior

./: .gitignore  Makefile  README.md  config.yaml.sample  pyproject.toml  setup.cfg  setup.py
.reuse/: dep5
doc/: .adr-dir.license
doc/design/: 0001-record-architecture-decisions.md  0002-enumerate-todo-items-anew-each-time-the-program-is-called.md  0003-store-each-todo-item-in-a-separate-file.md  0004-use-automatic-expansion-of-prefixes-for-date-specifications.md  0005-use-separate-separator-symbol-for-time-specifications-of-relative-dates.md
doc/source/: conf.py  index.rst  usage.rst
icalwarrior/: __init__.py  __main__.py  args.py  calendars.py  cli.py  configuration.py  constants.py  filter.py  todo.py  util.py  view.py
icalwarrior/test/: test_calendars.py  test_cli.py  test_util.py  test_view.py  util.py
icalwarrior/view/: __init__.py  formatter.py  sorter.py  tabular.py  tagger.py
src/: __init__.py  calendars.py  configuration.py  util.py  view.py
src/icalwarrior/: cli.py  configuration.py  constants.py
src/icalwarrior/filtering/: constraints.py  operators.py
src/icalwarrior/input/: cli.py  date.py
src/icalwarrior/model/: items.py  lists.py
src/icalwarrior/view/: formatter.py  sorter.py  tabular.py  tagger.py
src/test/: test_util.py
stubs/icalendar/: __init__.pyi  prop.pyi
test/: test_cli.py  test_config.py  test_lists.py  test_util.py  test_view.py  util.py
