# SPDX-FileCopyrightText: 2022 Martin Byrenheid <martin@byrenheid.net>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[metadata]
name = icalwarrior
version = 0.1
license = GPL 3.0 or later
author="Martin Byrenheid",
author_email="martin@byrenheid.net",

[options]
package_dir=
    =src
packages=find:

install_requires =
        lxml
        click
        icalendar
        tableformatter
        colorama
        termcolor
        pyyaml
        humanize

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    todo = icalwarrior.cli:run_cli

[options.package_data]
icalwarrior =
    py.typed